<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Фамилия и инициалы"
            />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/tv_course"
            android:layout_weight="1.2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/tv_abriv"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_weight="1.4"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="@string/tv_num"
            android:layout_weight="1.2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/group_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/course"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:hint="@string/hint_course"
            android:maxLength="1"
            android:maxLines="1"
            android:inputType="number"
            android:textAlignment="center"
            android:nextFocusDown="@+id/abbreviation" />

        <EditText
            android:id="@+id/abbreviation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapCharacters"
            android:layout_weight="1"
            android:hint="@string/hint_abbr"
            android:textAlignment="center"
            android:maxLength="5"
            android:nextFocusDown="@+id/index_number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:text="-"
            android:gravity="center"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/index_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:hint="@string/hint_num"
            android:inputType="number"
            android:maxLength="1"
            android:textAlignment="center"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectedGroups"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>