<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/addFarvorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addFarvorite"
            style="@style/SettingTextView"
            />

        <include layout="@layout/divider"/>

        <TextView
            android:id="@+id/addNotif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mygroup"
            style="@style/SettingTextView"
            />

        <include layout="@layout/divider"/>

        <Switch
            android:id="@+id/notifOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="15dp"
            android:text="@string/notifS"
            />

        <include layout="@layout/divider"/>

        <Switch
            android:id="@+id/alarmMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:padding="15dp"
            android:text="@string/alarmModeS"
            />

        <include layout="@layout/divider"/>

    </LinearLayout>
</ScrollView>