<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="?attr/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="7dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true"
                card_view:cardBackgroundColor="?attr/dividerColor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_back"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:paddingBottom="15dp"
                        android:text="@string/standartS"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="8dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_0"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson0"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_8_00_9_20_10"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_1"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/_9_30_10_15_5_n10_20_11_05_10"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_2"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/_11_15_12_00_5_n12_05_12_50_40"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_3"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:lineSpacingExtra="5dp"
                            android:text="@string/_13_30_14_15_5_n14_20_15_05_10"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_4"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_15_15_16_35_10"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_5"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_16_45_18_05_10"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="?attr/listBackground"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_6"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_18_15_19_35"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_background"
                        android:paddingLeft="5dp"
                        android:paddingTop="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:layout_width="15dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:text="@string/_7"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/lesson7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_18_30_19_50"
                            android:textColor="?android:textColor"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
